<resources>
    <string name="app_name">TaskGarden</string>
    <string name="find">Find</string>
    <string name="load">Load</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="time">Time</string>
</resources>