<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<Button
        android:id="@+id/buttonLoad"
        android:layout_width="114dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:onClick="loadTasks"
        android:text="@string/load"
        app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskId" />-->

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="300px"
        android:layout_height="55dp"
        android:layout_marginTop="68dp"
        android:onClick="updateTask"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@id/btnAddNewTask"
        app:layout_constraintLeft_toRightOf="@id/buttonFind"
        app:layout_constraintRight_toLeftOf="@id/buttonDelete"
        app:layout_constraintTop_toBottomOf="@+id/taskList" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="300px"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:onClick="findTask"
        android:text="@string/find"
        app:layout_constraintBottom_toTopOf="@+id/btnAddNewTask"
        app:layout_constraintEnd_toStartOf="@+id/buttonUpdate"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskId"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="300px"
        android:layout_height="55dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="13dp"
        android:onClick="deleteTask"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/btnAddNewTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUpdate"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />

    <EditText
        android:id="@+id/taskId"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@id/buttonFind"
        app:layout_constraintRight_toLeftOf="@id/taskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskList" />

    <EditText
        android:id="@+id/taskName"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/buttonDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskId"
        app:layout_constraintTop_toBottomOf="@+id/taskList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskList"
        android:layout_width="386dp"
        android:layout_height="510dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnAddNewTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/btnAddNewTask"
        android:layout_width="360dp"
        android:layout_height="71dp"
        android:onClick="openForm"
        android:text="add new task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />


</androidx.constraintlayout.widget.ConstraintLayout>